# mysym

./: .gitignore  CMakeLists.txt  README.md
doc/: api.md  design.md  exception.md  fixme.md  operator.md
doc/latex/: main.dvi  main.tex
src/: __create.h  __misc.h  __rule.h  add.cc  base.cc  basic_rule.cc  cmp.cc  coefficient.cc  compare.cc  compile.h  constant.cc  construct.h  copy.cc  create.cc  debug.h  degree.cc  elements.cc  eval.cc  exception.h  expansion.cc  exponent.cc  expression.cc  extend_euclid.cc  factor.cc  fraction.cc  functions.def  gcd.cc  global.cc  init.cc  iteration.cc  lcm.cc  library.cc  list.cc  make.cc  map.cc  match.cc  merge.cc  misc.cc  monomial.cc  mysym.cc  (+30 more)
src/interpreter/: interpreter.cc  interpreter.h
src/operator/: __add_log.cc  __div_pow.cc  __inf.h  __mul_pow.cc  __polynomial_div.cc  __sub_log.cc  __test.h  abs.cc  add.cc  atom.cc  cmp.cc  div.cc  fact.cc  frac.cc  frame.cc  func.cc  hyper.cc  log.cc  mod.cc  mul.cc  pow.cc  select.cc  sub.cc  trigo.cc
src/operator/equ/: equ.cc  ge.cc  gt.cc  le.cc  lt.cc  neq.cc
src/operator/hyper/: arccosh.cc  arccoth.cc  arccsch.cc  arcsech.cc  arcsinh.cc  arctanh.cc  cosh.cc  coth.cc  csch.cc  sech.cc  sinh.cc  tanh.cc
src/operator/logic/: land.cc  lnot.cc  lor.cc
src/operator/trigo/: arccos.cc  arccot.cc  arccsc.cc  arcsec.cc  arcsin.cc  arctan.cc  cos.cc  cot.cc  csc.cc  sec.cc  sin.cc  tan.cc
test/: CMakeLists.txt  test_abs.cc  test_add.cc  test_basic.cc  test_cmp.cc  test_coefficient.cc  test_degree.cc  test_div.cc  test_elements.cc  test_exponent.cc  test_expression.cc  test_factor.cc  test_fraction.cc  test_gcd.cc  test_io.cc  test_list.cc  test_map.cc  test_match.cc  test_misc.cc  test_monomial.cc  test_mul.cc  test_optcase.cc  test_optset.cc  test_polynomial.cc  test_pow.cc  test_regex.cc  test_rule.cc  test_set.cc  test_sign.cc  test_simplify.cc  test_sort.cc  test_sub.cc  test_symbol.cc  test_symopt.cc  test_term.cc  test_units.cc
